# Zonnecel

./: README.md
pythondaq/: README.md  pyproject.toml
pythondaq/src/pythondaq/: arduino_device.py  cli.py  daqGUI.py  diode_experiment.py  pv_experiment.py  view.py
pythondaq/src/pythondaq/Measurements/: Test.csv
pythondaq/tests/: adad.py  milo.py  test_imports.py
