[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["AniaraAnatidea <117993174+AniaraAnatidea@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
pyvisa-py = "^0.5.3"
pyvisa = "^1.12.0"
click = "^8.1.3"
pyserial = "^3.5"
pyside6 = "^6.4.1"
pyqtgraph = "^0.13.1"
numpy = "^1.23.5"

[tool.poetry.scripts]
Meting = "pythondaq.view:measurement"
app = "pythondaq.daqGUI:run"
cli = "pythondaq.cli:diode_group"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
